# renfe-tracker

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  bugs-found-by-qa.md  configuration.html  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  index.html  installation.html  pyproject.toml  requirements.txt  sitemap.xml
.cursor/: PHASE1_FIXES.md  PLAN_AND_ARCHITECTURE.md  Requeriments.md  TASKS_FROM_QA_BUGS.md  TASKS_SEARCH_UX.md  renfe-calls.md
.cursor/agents/: backend-developer.md  docker-expert-developer.md  frontend-web-developer.md  manager-architect.md  manual-qa.md  qa-test-developer.md  research-engineer.md
.github/workflows/: deploy-docs.yml  pr-tests.yml  release-docker.yml
app/: __init__.py  config.py  i18n.py  main.py  renfe_client.py  renfe_lib.py
app/api/: notifications.py  search.py  trips.py
app/constants/: stations.py
app/db/: config.py  connection.py  notifications.py  price_events.py  price_history.py  schema.py  (+2 more)
ca/: 404.html  configuration.html  index.html  installation.html  sitemap.xml
es/: 404.html  configuration.html  index.html  installation.html  sitemap.xml
features/: notifications.html  possible-trains.html  price-range.html  trip-tracking.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
renfe_mcp/: README.md  __init__.py  logging.py  price_checker.py  update_data.py
tests/: conftest.py  test_notifications_api.py  test_reference_dates.py  test_search_api.py  test_trips_api.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+144 files in other folders)
