[project]
name = "renfe-tracker"
version = "0.1.0"
description = "Track Renfe trains and prices (media/larga distancia). Self-hosted."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "FastAPI>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "APScheduler>=3.10.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    # Renfe library (GTFS + DWR price scraper, vendored in renfe_mcp/)
    "pandas>=2.3.3",
    "python-dateutil>=2.8.2",
    "json5>=0.12.0",
    "pydantic>=2.11.7",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "renfe_mcp"]
